welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Boolean does not take parameters
	if (vuBiscuit() == true) {
                     ^Program:12: error: Boolean does not take parameters
		vuBiscuit() == true
                         ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
for (i<-1 to 6){
      ^